test/sema/generic-args-to-builtin-type.delta.output
generic-args-to-builtin-type.delta:4:1: error: too many generic arguments to 'int', expected 0
int<bool> f() {
^
generic-args-to-builtin-type.delta:4:11: warning: unused declaration 'f'
int<bool> f() {
          ^
