test/sema/generic-args-to-builtin-type.delta
// RUN: %check_errors %not %delta -typecheck %s

// CHECK: [[@LINE+1]]:1: error: too many generic arguments to 'int', expected 0
int<bool> f() {
    return 42;
}
